# for display continuity sake please use 2 spaces instead of tabs

2012-04-27 mmichaud <michael.michaud@free.fr>
  * Improved/homogenized result layer naming in query tools :
    source layer_[attribute_]operator_[parameter_]value
  * Fixed some missing values in language files
  * FR 3521397/1 : fixed how cancel button of Select Items by Circle from
    Selected Layers dialog works

2012-04-22 Matthias Scholz <ms@jammerhund.de>
  * AboutDialog:
    * removed the output of the Stacktrace, if the "readme.txt" was not found.
      With Java Webstart this file cannot be found. It's better to view nothing.
      A Stacktrace confuse the eunduser.
    * Small GUI fixup, the about and infotab content are noc alwas on top.  


2012-04-20 mmichaud <michael.michaud@free.fr>
  * Improve performance of complex shapefile polygon reading (already 
    implemented in geotools). See also :
    http://www.mail-archive.com/jump-pilot-devel@lists.sourceforge.net/msg10788.html

2012-04-19 mmichaud <michael.michaud@free.fr>
  * Improved NoderPlugIn to be able to process features selected in several 
    layers and to make use of it in new plugins to be added in the mouse context 
    menu.
  * Add the following plugins in layer view mouse menu :
    - org.openjump.core.ui.plugin.mousemenu.NodeFeaturesPlugIn
    - org.openjump.core.ui.plugin.mousemenu.NodeLinesPlugIn
    - org.openjump.core.ui.plugin.mousemenu.NodePolygonsPlugIn
    - org.openjump.core.ui.plugin.mousemenu.SplitFeaturesPlugIn
    - org.openjump.core.ui.plugin.mousemenu.SplitLinesNodePolygonsPlugIn
    - org.openjump.core.ui.plugin.mousemenu.SpliPolygonsNodeLinesPlugIn
  
2012-04-19 ede
  * Fix bug #3519264

2012-04-18 Matthias Scholz <ms@jammerhund.de>
  * Fixed a NPE in the SuperZoomPanTool.deactivate()

2012-04-14 mmichaud <michael.michaud@free.fr>
  * Fixed a bug in WarpingPanel arising when the active frame is not a
    LayerManagerProxy (HTMLFrame for example)

2012-04-13 ede